--- a/GaiaProjectDjango/requirements.txt
+++ b/GaiaProjectDjango/requirements.txt
@@ -5,8 +5,11 @@ django-crispy-forms==2.4
 django-dotenv==1.4.2
 django-filter==25.1
 django-guardian==3.0.0
+django-widget-tweaks==1.5.0
 djangorestframework==3.16.0
+gunicorn==23.0.0
 Markdown==3.8
+packaging==25.0
 pillow==11.2.1
 psycopg2-binary==2.9.10
 pytz==2025.2
